Forenkling av introsiden

--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -50,27 +50,15 @@
     "introPage.tittel": "Søknad om utbetaling av omsorgspenger",
     "introPage.stegTittel": "Kan jeg søke om utbetaling av omsorgspenger?",
 
-    "introPage.info.1.html": "Denne søknaden bruker du når du er <strong>selvstendig næringsdrivende eller frilanser</strong> og skal søke om utbetaling av omsorgspenger. Hvis du er ansatt i eget AS regnes du som arbeidstaker, da skal du eller din regnskapsfører ",
-    "introPage.info.2": "sende inntektsmelding til NAV",
-    "introPage.info.3": "Du kan søke om omsorgspenger når du har vært hjemme fra jobb fordi",
-    "introPage.info.4": "barnet eller barnepasser er syk",
-    "introPage.info.5": "barnehagen eller skolen er stengt på grunn av koronaviruset",
-    "introPage.info.6": "barnet ikke kan gå i barnehage/skole/SFO på grunn av særlige smittevernhensyn",
-    "introPage.info.6.1": "barnet er i karantene på grunn av koronaviruset",
-    "introPage.info.7.1": "Vær oppmerksom på at om du har søkt om ",
-    "introPage.info.7.2": "kompensasjon for tapt inntekt som selvstendig næringsdrivende og/eller frilanser",
-    "introPage.info.7.3": ", kan du ikke søke om omsorgspenger for samme periode.",
-    "introPage.info.8.1": "Hvis du har søkt om kompensasjon, men nå ønsker å søke om omsorgspenger, må du trekke din søknad om kompensasjon. Dette gjør du ved å ",
-    "introPage.info.8.2": "skrive en beskjed til oss",
-    "introPage.info.8.3": ". Under tema velger du jobbsøker (selv om du ikke er jobbsøker).",
+    "introPage.info.1.html": "Denne søknaden bruker du når du er <strong>selvstendig næringsdrivende eller frilanser</strong> og skal søke om utbetaling av omsorgspenger.",
+    "introPage.info.2": "Hvis du er ansatt i eget AS regnes du som arbeidstaker, da skal du eller din regnskapsfører ",
+    "introPage.info.3": "sende inntektsmelding til NAV",
 
     "introPage.form.spm.erSelvstendigEllerFrilanser": "Er du selvstendig næringsdrivende eller frilanser?",
-    "introPage.form.spm.smittevernhensyn": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
+    "introPage.form.spm.smittevernhensyn": "Har du vært hjemme med barn grunnet særlige smittevernhensyn i forbindelse med koronaviruset?",
     "introPage.form.spm.smittevernhensyn.description.tittel": "Hva menes med særlige smittevernhensyn?",
-    "introPage.form.spm.smittevernhensyn.description.info.html": "Når barnehagen eller skolen er åpen, men du må være hjemme med barnet ditt på grunn <strong>av særlige smittevernhensyn</strong>, kan du bruke omsorgsdager. Det er en lege som avgjør om det foreligger særlige smittevernhensyn. Det kan være smittevernhensyn til barnet eller andre familiemedlemmer som bor med barnet.",
+    "introPage.form.spm.smittevernhensyn.description.info.html": "Når barnehagen eller skolen er åpen, men du må være hjemme med barnet ditt på grunn <strong>av særlige smittevernhensyn</strong> i ** forbindelse med koronaviruset, kan du bruke omsorgsdager. Det er en lege som avgjør om det foreligger særlige smittevernhensyn. Det kan være smittevernhensyn til barnet eller andre familiemedlemmer som bor med barnet.",
     "introPage.form.spm.hjemmePgaStengt": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
-    "introPage.form.spm.hjemmePgaSykdom": "Har du vært hjemme fra jobb fordi barnet eller barnepasser er blitt syk?",
-    "introPage.form.spm.hjemmePgaKarantene": "Har du vært hjemme fra jobb fordi barnet har vært i karantene på grunn av koronaviruset?",
 
     "introPage.søknadGjelderKunFor.1.html": "Denne søknaden gjelder <strong>kun for selvstendig næringsdrivende og frilansere</strong> som skal søke om utbetaling av omsorgspenger.",
     "introPage.søknadGjelderKunFor.2.html": "Hvis du er <strong>arbeidstaker</strong>, skal du ikke søke om utbetaling av omsorgspenger. Arbeidsgiveren din skal utbetale deg lønn som vanlig de dagene du tar ut omsorgsdager.",
