--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -50,31 +50,16 @@
     "introPage.tittel": "Søknad om utbetaling av omsorgspenger",
     "introPage.stegTittel": "Kan jeg søke om utbetaling av omsorgspenger?",
 
-    "introPage.info.1.html": "Denne søknaden bruker du når du er <strong>selvstendig næringsdrivende eller frilanser</strong> og skal søke om utbetaling av omsorgspenger. Hvis du er ansatt i eget AS regnes du som arbeidstaker, da skal du eller din regnskapsfører ",
-    "introPage.info.2": "sende inntektsmelding til NAV",
-    "introPage.info.3": "Du kan søke om omsorgspenger når du har vært hjemme fra jobb fordi",
-    "introPage.info.4": "barnet eller barnepasser er syk",
-    "introPage.info.5": "barnehagen eller skolen er stengt på grunn av koronaviruset",
-    "introPage.info.6": "barnet ikke kan gå i barnehage/skole/SFO på grunn av særlige smittevernhensyn",
-    "introPage.info.6.1": "barnet er i karantene på grunn av koronaviruset",
-    "introPage.info.7.1": "Vær oppmerksom på at om du har søkt om ",
-    "introPage.info.7.2": "kompensasjon for tapt inntekt som selvstendig næringsdrivende og/eller frilanser",
-    "introPage.info.7.3": ", kan du ikke søke om omsorgspenger for samme periode.",
-    "introPage.info.8.1": "Hvis du har søkt om kompensasjon, men nå ønsker å søke om omsorgspenger, må du trekke din søknad om kompensasjon. Dette gjør du ved å ",
-    "introPage.info.8.2": "skrive en beskjed til oss",
-    "introPage.info.8.3": ". Under tema velger du jobbsøker (selv om du ikke er jobbsøker).",
+    "introPage.info.1.html": "Denne søknaden bruker du når du er <strong>selvstendig næringsdrivende eller frilanser</strong> og skal søke om utbetaling av omsorgspenger.",
+    "introPage.info.2": "Hvis du er ansatt i eget AS regnes du som arbeidstaker, da skal du eller din regnskapsfører ",
+    "introPage.info.3": "sende inntektsmelding til NAV",
 
-    "introPage.form.spm.erSelvstendigEllerFrilanser": "Er du selvstendig næringsdrivende eller frilanser?",
-    "introPage.form.spm.smittevernhensyn": "Har du vært hjemme med barn grunnet særlige smittevernhensyn?",
+    "introPage.form.spm.smittevernhensyn": "Har du vært hjemme med barn grunnet særlige smittevernhensyn i forbindelse med koronaviruset?",
     "introPage.form.spm.smittevernhensyn.description.tittel": "Hva menes med særlige smittevernhensyn?",
-    "introPage.form.spm.smittevernhensyn.description.info.html": "Når barnehagen eller skolen er åpen, men du må være hjemme med barnet ditt på grunn <strong>av særlige smittevernhensyn</strong>, kan du bruke omsorgsdager. Det er en lege som avgjør om det foreligger særlige smittevernhensyn. Det kan være smittevernhensyn til barnet eller andre familiemedlemmer som bor med barnet.",
-    "introPage.form.spm.hjemmePgaStengt": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
-    "introPage.form.spm.hjemmePgaSykdom": "Har du vært hjemme fra jobb fordi barnet eller barnepasser er blitt syk?",
-    "introPage.form.spm.hjemmePgaKarantene": "Har du vært hjemme fra jobb fordi barnet har vært i karantene på grunn av koronaviruset?",
+    "introPage.form.spm.smittevernhensyn.description.info.html": "Når barnehagen eller skolen er åpen, men du må være hjemme med barnet ditt på grunn <strong>av særlige smittevernhensyn</strong> i forbindelse med koronaviruset, kan du bruke omsorgsdager. Det er en lege som avgjør om det foreligger særlige smittevernhensyn. Det kan være smittevernhensyn til barnet eller andre familiemedlemmer som bor med barnet.",
+    "introPage.form.spm.hjemmePgaStengt": "Har du vært hjemme fra jobb fordi barnehagen eller skolen har vært stengt på grunn av koronaviruset?",
 
-    "introPage.søknadGjelderKunFor.1.html": "Denne søknaden gjelder <strong>kun for selvstendig næringsdrivende og frilansere</strong> som skal søke om utbetaling av omsorgspenger.",
     "introPage.søknadGjelderKunFor.2.html": "Hvis du er <strong>arbeidstaker</strong>, skal du ikke søke om utbetaling av omsorgspenger. Arbeidsgiveren din skal utbetale deg lønn som vanlig de dagene du tar ut omsorgsdager.",
-    "introPage.kanIkkeBrukeSøknad.html": "Du kan <strong>kun</strong> bruke denne søknaden hvis du er hjemme fra jobb på grunn av én av situasjonene beskrevet over.",
     "introPage.smittevernInfo.1.html": "I søknaden må du laste opp en bekreftelse fra lege. Legen må bekrefte at barnet ikke kan gå i barnehage eller skole fordi det er <strong>særlige smittevernhensyn</strong> i forbindelse med koronaviruset som må ivaretas for enten barnet eller et familiemedlem som barnet bor sammen med. Legen skal ikke oppgi diagnose eller hvilket familiemedlem det gjelder.",
     "introPage.smittevernInfo.2": "Hvis du ikke har bekreftelse tilgjengelig når du søker, kan du ettersende den. Vi kan ikke behandle søknaden før vi mottar bekreftelsen.",
     "introPage.stengtBhgSkole.1": "I søknaden må du laste opp en bekreftelse fra barnehagen eller skolen på at de har stengt.",
@@ -210,7 +195,7 @@
     "step.fravaer.info.ikkeHelg.tittel": "Hvorfor kan jeg ikke velge lørdag eller søndag?",
     "step.fravaer.info.ikkeHelg.tekst": "Du kan kun få utbetalt omsorgspenger for hverdager, selv om du jobber lørdag eller søndag. Derfor kan du ikke velge lørdag eller søndag som start- eller sluttdato i perioden du legger inn.",
     "step.fravaer.spm.harDagerMedDelvisFravær": "Har du hatt dager med delvis fravær fra jobb?",
-    "step.fravaer.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehage/skole/SFO har vært stengt på grunn av koronaviruset?",
+    "step.fravaer.spm.hjemmePgaStengtBhgSkole.2021": "Har du vært hjemme fra jobb fordi barnehagen eller skolen har vært stengt på grunn av koronaviruset?",
     "step.fravaer.harDagerMedDelvisFravær.listTitle": "Dager med delvis fravær fra jobb",
     "step.fravaer.harDagerMedDelvisFravær.addLabel": "Legg til dag med delvis fravær fra jobb",
     "step.fravaer.harDagerMedDelvisFravær.modalTitle": "Dag med delvis fravær fra jobb",
