--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -382,11 +382,9 @@
     "page.confirmation.sidetittel": "Vi har mottatt søknaden din",
     "page.confirmation.tittel": "Vi har mottatt søknad om utbetaling av omsorgspenger",
     "page.confirmation.undertittel": "Hva skjer videre nå?",
-    "page.confirmation.checklist.1.a": "Vi starter behandlingen av søknaden din når vi har mottatt all nødvendig dokumentasjon. Vi kontakter deg hvis vi trenger flere opplysninger. Hvis du skal ",
-    "page.confirmation.checklist.1.b": "ettersende dokumentasjon kan du gjøre det her",
-    "page.confirmation.checklist.2.a": "Når søknaden er ferdigbehandlet, får du et svar fra oss på «Min side». Du kan se",
-    "page.confirmation.checklist.2.b": "saksbehandlingstiden",
-    "page.confirmation.checklist.2.c": "for ditt fylke her.",
+    "page.confirmation.checklist.1.a": "Vi starter behandlingen av søknaden din når vi har mottatt all nødvendig dokumentasjon. Vi kontakter deg hvis vi trenger flere opplysninger.",
+    "page.confirmation.checklist.2.a": "Når søknaden er ferdigbehandlet, får du et svar fra oss på «Min side».",
+    "page.confirmation.checklist.2.b": "Du kan se saksbehandlingstiden her.",
 
     "validation.harUtvidetRett.yesOrNoIsUnanswered": "Du må svare at du har fått ekstra omsorgsdager for barn fordi barnet har kronisk sykdom eller funksjonshemming eller ikke.",
     "validation.harUtvidetRettFor.listIsEmpty": "Du må krysse av for det eller de barna som har utvidet rett.",
