--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -384,7 +384,7 @@
     "page.confirmation.undertittel": "Hva skjer videre nå?",
     "page.confirmation.checklist.1.a": "Vi starter behandlingen av søknaden din når vi har mottatt all nødvendig dokumentasjon. Vi kontakter deg hvis vi trenger flere opplysninger.",
     "page.confirmation.checklist.2.a": "Når søknaden er ferdigbehandlet, får du et svar fra oss på «Min side».",
-    "page.confirmation.checklist.2.b": "Du kan se saksbehandlingstiden her.",
+    "page.confirmation.checklist.2.b": "Du kan sjekke saksbehandlingstiden her.",
 
     "validation.harUtvidetRett.yesOrNoIsUnanswered": "Du må svare at du har fått ekstra omsorgsdager for barn fordi barnet har kronisk sykdom eller funksjonshemming eller ikke.",
     "validation.harUtvidetRettFor.listIsEmpty": "Du må krysse av for det eller de barna som har utvidet rett.",
