--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -214,6 +214,16 @@
     "steg.vedlegg_smittevernhensyn.info.3": "Her får du veiledning til hvordan du ettersender dokumentasjon",
     "steg.vedlegg_smittevernhensyn.info.4": ".",
 
+    "step.vedlegg_legeerklæring.pageTitle": "Legeerklæring",
+    "step.vedlegg_legeerklæring.stepTitle": "Last opp legeerklæring",
+    "step.vedlegg_legeerklæring.stepIndicatorLabel": "Last opp din legeerklæring",
+    "step.vedlegg_legeerklæring.counsellorpanel.1": "Her skal du laste opp legeerklæringen. Det gjør du enten ved å ta bilde av leggerklæringen, eller ved å skanne den. Vær nøye med at all tekst er med, inkludert legens signatur.",
+    "step.vedlegg_legeerklæring.counsellorpanel.2": "Vi kan ikke behandle søknaden din før vi mottar legeerklæringen. Hvis du ikke har legeerklæringen tilgjengelig nå, anbefaler vi at du venter med å søke til du har den tilgjengelig. Hvis du ikke kan vente med å sende søknaden, kan du fortsette uten legeerklæring, men da må du ettersende den så snart som mulig.",
+    "step.vedlegg_legeerklæring.counsellorpanel.3": "Her får du veiledning til hvordan du ettersender dokumentasjon",
+
+    "step.vedlegg_legeerklæring.uploadBtn": "Last opp legeerklæring",
+    "step.vedlegg_legeerklæring.nextButtonLabel": "Fortsett",
+
     "vedleggsliste.fjernKnapp": "Fjern vedlegg",
     "vedleggsliste.ingenLegeerklæringLastetOpp": "Ingen vedlegg er lastet opp",
     "vedleggsliste.ingenSamværsavtaleLastetOpp": "Ingen vedlegg er lastet opp",
@@ -318,6 +328,7 @@
 
     "steg.oppsummering.dokumenter.header": "Vedlegg",
     "steg.oppsummering.dokumenter.ingenVedlegg": "Ingen vedlegg er lastet opp",
+    "steg.oppsummering.dokumenterLegeerklæring.header": "Legeerklæring",
     "steg.oppsummering.dokumenterSmittevern.header": "Bekreftelse fra lege",
     "steg.oppsummering.dokumenterStengtBhgSkole.header": "Bekreftelse fra barnehage eller skole",
 
