--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -113,9 +113,9 @@
     "relasjonTilBarnet.adoptivforelder": "Adoptivforelder",
     "relasjonTilBarnet.fosterforelder": "Fosterforelder",
 
-    "step.fravaer.pageTitle": "Dager du har vært hjemme med barn - Søknad om utbetaling av omsorgspenger",
-    "step.fravaer.stepTitle": "Dager du har vært hjemme med barn",
-    "step.fravaer.stepIndicatorLabel": "Dager du har vært hjemme med barn",
+    "step.fravaer.pageTitle": "Dager du søker om utbetaling for - Søknad om utbetaling av omsorgspenger",
+    "step.fravaer.stepTitle": "Dager du søker om utbetaling for",
+    "step.fravaer.stepIndicatorLabel": "Dager du søker om utbetaling for",
     "step.fravaer.nextButtonLabel": "Fortsett",
     "step.fravaer.counsellorpanel.content": "I de fleste tilfeller må man som selvstendig næringsdrivende og frilanser betale de 10 første dager med omsorgspenger i året selv.",
     "step.fravaer.dager_med_fullt_fravært.label": "Dager med fullt fravær",
@@ -123,8 +123,6 @@
     "step.fravaer.dager_med_delvis_fravært.label": "Dager med delvis fravær",
     "step.fravaer.dager_med_delvis_fravært.info": "TODO",
     "step.fravaer.har_du_oppholdt_deg_i_utlandet_for_dager_du_soker_ok.spm": "Har du vært i utlandet noen av dagene du søker omsorgspenger for?",
-    "step.fravaer.harSøktAndreUtbetalinger.spm": "Har du søkt om andre utbetalinger fra NAV?",
-    "step.fravaer.hvilke_utbetalinger.spm": "Hvilke andre utbetalinger har du søkt om?",
 
     "step.fravaer.info.1": "Du kan få utbetalt omsorgspenger for bruk av omsorgsdager i opptil tre måneder tilbake i tid, regnet fra måneden før NAV mottok søknad fra deg.",
     "step.fravaer.info.2": "Du kan kun søke om utbetaling fra ett og samme år. Det betyr at hvis du skal søke om utbetaling for {forrigeÅr} i tillegg til {inneværendeÅr}, må du sende to søknader.",
@@ -148,10 +146,6 @@
     "step.fravaer.utenlandsopphold.tittel": "Utenlandsopphold i dagene med fravær",
     "step.fravaer.utenlandsopphold.addLabel": "Legg til utenlandsopphold",
     "step.fravaer.utenlandsopphold.modalTitle": "Utenlandsopphold siste 12 måneder",
-    "step.fravaer.andreUtbetalinger": "Andre utbetalinger fra NAV",
-    "andreUtbetalinger.DAGPENGER": "Dagpenger",
-    "andreUtbetalinger.SYKEPENGER": "Sykepenger",
-    "andreUtbetalinger.MIDLERTIDIG_KOMPENSASJON_SN_FRI": "Midlertidig kompensasjon for selvstendig næringsdrivende og frilanser",
 
     "fravær.antallTimer": "Antall timer",
     "fravær.time": "time",
@@ -182,6 +176,16 @@
     "steg.vedlegg_smittevernhensyn.info.2": "Vi kan ikke behandle søknaden din før vi mottar bekreftelsen. Hvis du ikke har bekreftelsen tilgjengelig nå, anbefaler vi at du venter med å søke til du har den tilgjengelig. Hvis du ikke kan vente med å sende søknaden, kan du fortsette uten bekreftelsen, men da må du ettersende den så snart som mulig.",
     "steg.vedlegg_smittevernhensyn.info.3": "Her får du veiledning til hvordan du ettersender dokumentasjon",
     "steg.vedlegg_smittevernhensyn.info.4": ".",
+
+    "step.vedlegg_legeerklæring.pageTitle": "Legeerklæring",
+    "step.vedlegg_legeerklæring.stepTitle": "Last opp legeerklæring",
+    "step.vedlegg_legeerklæring.stepIndicatorLabel": "Last opp din legeerklæring",
+    "step.vedlegg_legeerklæring.counsellorpanel.1": "Når du søker om utbetaling for mer enn 3 sammenhengende dager, må du laste opp en legeerklæring som gjelder fra og med den 4. dagen. Hvis du ikke har legeerklæring tilgjengelig nå, kan du ettersende den så snart som mulig.",
+    "step.vedlegg_legeerklæring.counsellorpanel.1.lenkeEttersending": "Her får du veiledning til hvordan du ettersender dokumentasjon.",
+    "step.vedlegg_legeerklæring.counsellorpanel.2": "Du trenger altså ikke legeerklæring hvis du søker for kortere perioder, eller enkeltdager.",
+
+    "step.vedlegg_legeerklæring.uploadBtn": "Last opp legeerklæring",
+    "step.vedlegg_legeerklæring.nextButtonLabel": "Fortsett",
 
     "vedleggsliste.fjernKnapp": "Fjern vedlegg",
     "vedleggsliste.ingenLegeerklæringLastetOpp": "Ingen vedlegg er lastet opp",
@@ -269,7 +273,6 @@
     "step.oppsummering.dineBarn.listItem.årsak.FOSTERBARN": "(Barnet er mitt fosterbarn).",
 
     "steg.oppsummering.arbeidssituasjon.header": "Din arbeidssituasjon",
-    "steg.oppsummering.harSøktOmAndreUtbetalinger": "Hvilke andre utbetalinger har du søkt om?",
     "steg.oppsummering.utbetalinger.header": "Omsorgsdager du søker utbetaling for",
 
     "steg.oppsummering.medlemskap.header": "Medlemskap i folketrygden",
@@ -288,6 +291,7 @@
 
     "steg.oppsummering.dokumenter.header": "Vedlegg",
     "steg.oppsummering.dokumenter.ingenVedlegg": "Ingen vedlegg er lastet opp",
+    "steg.oppsummering.dokumenterLegeerklæring.header": "Legeerklæring",
     "steg.oppsummering.dokumenterSmittevern.header": "Bekreftelse fra lege",
     "steg.oppsummering.dokumenterStengtBhgSkole.header": "Bekreftelse fra barnehage eller skole",
 
@@ -322,8 +326,6 @@
     "frilanser.summary.jobberFortsatt.header": "Jobber du fortsatt som frilanser?",
     "frilanser.summary.nårSluttet.header": "Når sluttet du som frilanser?",
 
-    "summary.andreIntekter.header": "Andre utbetalinger",
-
     "page.confirmation.sidetittel": "Vi har mottatt søknaden din",
     "page.confirmation.tittel": "Vi har mottatt søknad om utbetaling av omsorgspenger",
     "page.confirmation.undertittel": "Hva skjer videre nå?",
@@ -345,8 +347,6 @@
     "validation.harDagerMedDelvisFravær.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har hatt dager med delvis fravær fra jobb.",
     "validation.perioder_harVærtIUtlandet.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har vært i utlandet noen av dagene du søker omsorgspenger for.",
     "validation.perioder_utenlandsopphold.listIsEmpty": "Du har svart du har vært i utlandet i perioden du søker for, du må derfor legge til utenlandsopphold.",
-    "validation.harSøktAndreUtbetalinger.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du har søkt om andre utbetalinger fra NAV.",
-    "validation.andreUtbetalinger.listIsEmpty": "Du har ikke valgt hvilke andre utbetalinger du har søkt om.",
 
     "validation.frilans_erFrilanser.yesOrNoIsUnanswered": "Du må svare ja eller nei på om du var frilanser.",
     "validation.frilans_startdato.dateHasNoValue": "Du må fylle ut når du startet som frilanser.",
