--- a/src/app/i18n/nb.json
+++ b/src/app/i18n/nb.json
@@ -88,13 +88,13 @@
     "step.dine-barn.annetBarnListAndDialog.modalTitle": "Legg til barn",
 
     "step.dine-barn.harFåttEkstraOmsorgsdager.label": "Ekstra omsorgsdager",
-    "step.dine-barn.harFåttEkstraOmsorgsdager.spm": "Har du fått ekstra omsorgsdager for barn som har kronisk sykdom eller funksjonshemning?",
-    "step.dine-barn.harFåttEkstraOmsorgsdager.spm.ettBarn": "Har du fått ekstra omsorgsdager for barnet på grunn av kronisk sykdom eller funksjonshemning?",
+    "step.dine-barn.harFåttEkstraOmsorgsdager.spm": "Har du søkt om eller fått ekstra omsorgsdager fordi du har barn som er kronisk sykt, funksjonshemmet eller langvarig sykt?",
+    "step.dine-barn.harFåttEkstraOmsorgsdager.spm.ettBarn": "Har du søkt om eller fått ekstra omsorgsdager fordi barnet er kronisk sykt, funksjonshemmet eller langvarig sykt?",
 
-    "step.dine-barn.harFåttEkstraOmsorgsdager.nei.alertStripe": "Du har ikke rett til å bruke omsorgsdager. Når du kun har barn som er 13 år i år eller eldre, må du ha søkt om og fått ekstra omsorgsdager for å kunne bruke omsorgsdager.",
-    "step.dine-barn.utvidetRettFor.spm": "Kryss av for barn du har fått ekstra omsorgsdager for:",
-    "step.dine-barn.utvidetRettFor.info": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du brukte. Dette er fordi du kun har barn som er 13 år i år eller eldre, og som du har fått ekstra omsorgsdager for. Gå videre til neste steg og legg inn dagene du vil søke utbetaling for.",
-    "step.dine-barn.utvidetRettFor.info.ettBarn": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du brukte. Dette er fordi du kun har barn som er 13 år i år eller eldre, og som du har fått ekstra omsorgsdager for. Gå videre til neste steg og legg inn dagene du vil søke utbetaling for.",
+    "step.dine-barn.harFåttEkstraOmsorgsdager.nei.alertStripe": "Når du kun har barn som er 13 år i år eller eldre, må du ha søkt om eller fått ekstra omsorgsdager for å kunne søke om utbetaling.",
+    "step.dine-barn.utvidetRettFor.spm": "Velg barn du har søkt om eller fått ekstra omsorgsdager for:",
+    "step.dine-barn.utvidetRettFor.info": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du brukte. Dette er fordi du kun har barn som er 13 år i år eller eldre, og som du har søkt om eller fått ekstra omsorgsdager for. Fortsett til neste steg for å legge inn dagene du søker om utbetaling for.",
+    "step.dine-barn.utvidetRettFor.info.ettBarn": "Du kan ha rett til utbetaling fra NAV fra den første omsorgsdagen du brukte. Dette er fordi du kun har barn som er 13 år i år eller eldre, og som du har søkt om eller fått ekstra omsorgsdager for. Fortsett til neste steg for å legge inn dagene du søker om utbetaling for.",
 
     "step.dine-barn.bekrefterDektTiDagerSelv.info.titel": "Omsorgsdager du må dekke selv",
     "step.dine-barn.bekrefterDektTiDagerSelv.info": "Når du har barn som har fylt 12 år i år, eller er yngre, må du dekke de 10 første omsorgsdagene du bruker hvert kalenderår. Du kan søke om utbetaling fra NAV fra den 11. dagen.",
@@ -335,7 +335,7 @@
     "page.confirmation.checklist.2.b": "Du kan sjekke saksbehandlingstiden her.",
 
     "validation.harUtvidetRett.yesOrNoIsUnanswered": "Du må svare at du har fått ekstra omsorgsdager for barn fordi barnet har kronisk sykdom eller funksjonshemming eller ikke.",
-    "validation.harUtvidetRettFor.listIsEmpty": "Du må krysse av for det eller de barna som har utvidet rett.",
+    "validation.harUtvidetRettFor.listIsEmpty": "Du må velge barn du har søkt om eller fått ekstra omsorgsdager for.",
     "validation.harDekketTiFørsteDagerSelv.notChecked": "Du må bekrefte at du allerede har dekt 10 dager selv i år.",
     "validation.ingen_dokumenter": "Ingen vedlegg er lastet opp.",
     "validation.for_mange_dokumenter": "For mange dokumenter er lastet opp.",
